<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextStyle"
        android:text="@string/display_currency"
        android:textColor="@color/Pink_Shade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtView">


        <RadioButton
            android:id="@+id/radio_can"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/canada"
            android:textAllCaps="true"/>

        <RadioButton
            android:id="@+id/radio_usa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usa"
            android:textAllCaps="true" />

        <RadioButton
            android:id="@+id/radio_uk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uk"
            android:textAllCaps="true" />

        <RadioButton
            android:id="@+id/radio_chi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/china"
            android:textAllCaps="true" />
    </RadioGroup>

    <Button
        android:id="@+id/okBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        style="@style/ButtonStyle"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>